example/fail/fail_type12.dl
int main;
int $[main]{ // duplicate identifier
   return 0;
    
}

